# petracache

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
data/rocksdb/: 000129.sst  000131.sst  000133.sst  IDENTITY  LOG  LOG.old.1769102521907258  LOG.old.1769103753099567  LOG.old.1769104215388219  LOG.old.1769104306058246  LOG.old.1769104436290172  LOG.old.1769104704823052  MANIFEST-000113  OPTIONS-000115
docs/: ROCKSDB_TUNING.md
src/: config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  prelude.rs  server.rs
src/protocol/: command.rs  mod.rs  parser.rs  response.rs
src/server/: connection.rs  handler.rs  mod.rs
src/storage/: mod.rs  rocks.rs  value.rs
