[package]
name = "petracache"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "High-performance memcached-compatible cache server backed by RocksDB"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread", "sync", "signal", "time", "io-util", "net", "macros"] }

# Storage
rust-rocksdb = { version = "0.45.0", features = ["multi-threaded-cf"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Buffers and bytes
bytes = "1.11.0"
itoa = "1.0"
memchr = "2.7"

# Metrics
prometheus = "0.14"

# Logging/tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

# Utilities
parking_lot = "0.12.5"
tokio-util = "0.7.18"

[dev-dependencies]
tempfile = "3.24.0"
