[package]
name = "petracache"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "High-performance memcached-compatible cache server backed by RocksDB"
license = "MIT"
repository = "https://github.com/umit/petracache"
authors = ["Umit Unal"]
keywords = ["memcached", "cache", "rocksdb", "server"]
categories = ["caching", "database", "network-programming"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"

# Storage
rust-rocksdb = { version = "0.45", features = ["multi-threaded-cf"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Buffers and bytes
bytes = "1.11"
itoa = "1.0"
memchr = "2.7"

# Metrics
prometheus = "0.14"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Utilities
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.24"

[lints.rust]
unsafe_code = "warn"
# missing_docs = "warn"  # TODO: Enable when docs are complete

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# nursery has too many false positives, disable for now
# nursery = { level = "warn", priority = -1 }

# Allow stylistic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unused_self = "allow"
format_push_string = "allow"
significant_drop_tightening = "allow"
manual_let_else = "allow"
option_if_let_else = "allow"
single_match_else = "allow"
ignored_unit_patterns = "allow"
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
type_complexity = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = true
codegen-units = 1
